fix: background color contrast fixed for blocks number, countdoen and gridBallery

--- a/src/theme/ItaliaTheme/Blocks/_gridGalleryTemplate.scss
+++ b/src/theme/ItaliaTheme/Blocks/_gridGalleryTemplate.scss
@@ -154,9 +154,8 @@
           right: 0;
           bottom: 0;
           left: 0;
-          background: rgba(0, 0, 0, 0.6);
+          background-color: rgba(#000, 0.65);
           content: '';
-          opacity: 0.75;
           transition: opacity 0.3s ease;
         }
 
@@ -167,7 +166,7 @@
           }
 
           &::before {
-            opacity: 1;
+            background-color: rgba(#000, 0.75);
           }
         }
       }
